--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
+
+	* doc/libtool.texi: Minor formatting cleanups.
+
 2005-03-24  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.m4sh: Propogate --debug flag to sub-libtoolizes.
