--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1067,7 +1067,7 @@ may get errors about symbol redefinitions.
 
 The key is remembering that a convenience library contains @sc{pic}
 objects, and can be linked where a list of @sc{pic} objects makes sense;
-i.e. into a shared library.  A static convenience library contains
+i.e.@: into a shared library.  A static convenience library contains
 non-@sc{pic} objects, so can be linked into an old static library, or
 a program.
 
@@ -1210,7 +1210,7 @@ that only an object file is created.
 
 Libtool determines the name of the output file by removing the directory
 component from the source file name, then substituting the source code
-suffix (e.g. @samp{.c} for C source code) with the library object suffix,
+suffix (e.g.@: @samp{.c} for C source code) with the library object suffix,
 @samp{.lo}.
 
 If shared libraries are being built, any necessary PIC generation flags
@@ -1305,7 +1305,7 @@ create a static library.
 
 @item -avoid-version
 Tries to avoid versioning (@pxref{Versioning}) for libraries and modules,
-i.e. no version information is stored and no symbolic links are created.
+i.e.@: no version information is stored and no symbolic links are created.
 If the platform requires versioning, this option has no effect.
 
 @item -dlopen @var{file}
@@ -1973,8 +1973,8 @@ specifying @option{--without-pic} to @command{configure}.
 
 @defmac LT_LANG (@var{LANGUAGE})
 Enable @command{libtool} support for the language given if it
-has not yet already been enabled.  Languages accepted are "C++",
-"Fortran 77", "Java" and "Windows Resource".
+has not yet already been enabled.  Languages accepted are ``C++'',
+``Fortran 77'', ``Java'' and ``Windows Resource''.
 
 If Autoconf language support macros such as @code{AC_PROG_CXX} are
 used in your @file{configure.ac}, Libtool language support will automatically
@@ -2722,7 +2722,7 @@ by different types of compilers:
 @table @asis
 @item C++ compilers
 C++ compilers require that functions be declared with full prototypes,
-since C++ is more strongly typed than C.  C functions and variables also
+since C++ is more strongly typed than C@.  C functions and variables also
 need to be declared with the @code{extern "C"} directive, so that the
 names aren't mangled.  @xref{C++ libraries}, for other issues relevant
 to using C++ with libtool.
@@ -3380,7 +3380,7 @@ reported that @sc{gnu}/Linux's glibc 2.0's @code{dlopen} with
 @samp{RTLD_LAZY} (which libltdl uses by default) is not thread-safe,
 but this problem is supposed to be fixed in glibc 2.1.  On the other
 hand, @samp{RTLD_NOW} was reported to introduce problems in
-multi-threaded applications on FreeBSD.  Working around these problems
+multi-threaded applications on FreeBSD@.  Working around these problems
 is left as an exercise for the reader; contributions are certainly
 welcome.
 
@@ -3472,7 +3472,7 @@ This search path is the value of the environment variable
 
 @item system library search path:
 The system dependent library search path
-(e.g. on Linux it is @var{LD_LIBRARY_PATH}).
+(e.g.@: on Linux it is @var{LD_LIBRARY_PATH}).
 @end enumerate
 
 Each search path must be a list of absolute directories separated by
@@ -3595,7 +3595,7 @@ you should link it with the @option{-avoid-version} switch.
 Note that libtool modules don't need to have a "lib" prefix.
 However, Automake 1.4 or higher is required to build such modules.
 
-Usually a set of modules provide the same interface, i.e, exports the same
+Usually a set of modules provide the same interface, i.e.@: exports the same
 symbols, so that a program can dlopen them without having to know more
 about their internals: In order to avoid symbol conflicts all exported
 symbols must be prefixed with "modulename_LTX_" (@var{modulename} is
@@ -3678,7 +3678,7 @@ structure:
 @code{lt_dlinfo} is used to store information about a module.
 The @var{filename} attribute is a null-terminated character string of
 the real module file name.  If the module is a libtool module then
-@var{name} is its module name (e.g. @code{"libfoo"} for
+@var{name} is its module name (e.g.@: @code{"libfoo"} for
 @code{"dir/libfoo.la"}), otherwise it is set to @code{NULL}.  The
 @var{ref_count} attribute is a reference counter that describes how
 often the same module is currently loaded. @var{module} is the
@@ -4177,7 +4177,7 @@ One advantage of the convenience library is that it is not installed,
 so the fact that you use libltdl will not be apparent to the user, and
 it will not overwrite a pre-installed version of libltdl a user might
 have.  On the other hand, if you want to upgrade libltdl for any
-reason (e.g. a bugfix) you'll have to recompile your package instead
+reason (e.g.@: a bugfix) you'll have to recompile your package instead
 of just replacing an installed version of libltdl.  However, if your
 programs or libraries are linked with other libraries that use such a
 pre-installed version of libltdl, you may get linker errors or
@@ -4723,7 +4723,7 @@ on DEC OSF/1 3 and 4.
 
 @item none
 @vindex none
-It causes deplibs to be reassigned deplibs="".  That way
+It causes deplibs to be reassigned @samp{deplibs=""}.  That way
 @samp{archive_cmds} can contain deplibs on all platforms, but not have
 deplibs used unless needed.
 
@@ -4738,7 +4738,7 @@ improve it.
 Then in @file{ltmain.in} we have the real workhorse: a little
 initialization and postprocessing (to setup/release variables for use
 with eval echo libname_spec etc.) and a case statement that decides
-the method that is being used.  This is the real code... I wish I could
+the method that is being used.  This is the real code@dots{} I wish I could
 condense it a little more, but I don't think I can without function
 calls.  I've mostly optimized it (moved things out of loops, etc) but
 there is probably some fat left.  I thought I should stop while I was
@@ -5028,7 +5028,7 @@ simultaneously.  Set to @samp{yes} or @samp{no}.
 
 @defvar compiler_o_lo
 Whether the compiler supports compiling directly to a @samp{.lo} file,
-i.e whether object files do not have to have the suffix @samp{.o}.
+i.e.@: whether object files do not have to have the suffix @samp{.o}.
 Set to @samp{yes} or @samp{no}.
 @end defvar
 
@@ -5096,7 +5096,7 @@ Same as @var{finish_cmds}, except the commands are not displayed.
 @end defvar
 
 @defvar fix_srcfile_path
-Expression to fix the shell variable $srcfile for the compiler.
+Expression to fix the shell variable @samp{$srcfile} for the compiler.
 @end defvar
 
 @defvar global_symbol_pipe
@@ -5220,7 +5220,7 @@ module without the @samp{lib} prefix.
 @end defvar
 
 @defvar need_version
-Whether versioning is required for libraries, i.e. whether the
+Whether versioning is required for libraries, i.e.@: whether the
 dynamic linker requires a version suffix for all libraries.
 Set to @samp{yes} or @samp{no}.  By default, it is @samp{unknown}, which
 means the same as @samp{yes}, but documents that we are not really sure
