--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* HACKING: echo vs $ECHO.
+
 2005-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
 
 	* doc/libtool.texi: Minor formatting cleanups.
