--- a/HACKING
+++ b/HACKING
@@ -226,7 +226,23 @@ yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
   functions should begin indented by 4 spaces.
 
 
-8. Abstraction layers in libltdl
+8. Editing `.m4' Files
+======================
+
+* Be careful with both `echo' and `$ECHO'.  As the latter may be one of
+   echo
+   print -r
+   printf %s\n
+   $CONFIG_SHELL $0 --fallback-echo
+  it may not have more than one argument, its value may not be eval'ed
+  and the argument may not start with a `-'.  As a rule of thumb, use
+   echo ..		for literal (constant) strings without leading
+			hyphen and no backslashes within,
+   $ECHO ".."		for strings without leading hyphen,
+   $ECHO "X.." | $Xsed	otherwise.
+
+
+9. Abstraction layers in libltdl
 ================================
 
 * The libltdl API uses a layered approach to differentiate internal and
@@ -310,7 +326,7 @@ yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
 	lt__private.h
 
 
-9. Release Procedure
+10. Release Procedure
 ====================
 
 * If you are a libtool maintainer, but have not yet registered your
@@ -397,7 +413,7 @@ yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
 
 
 
-10. Alpha release note template
+11. Alpha release note template
 ===============================
 
 To: libtool@gnu.org, autotools-announce@gnu.org
@@ -470,7 +486,7 @@ output of any failed test groups, and the output from `./libtool --help.'
 
 
 
-11. Full release note template
+12. Full release note template
 ==============================
 
 To: info-gnu@gnu.org
