--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2005-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
-	* m4/libtool.m4 (AC_LIBTOOL_LANG_GCJ_CONFIG, AC_LIBTOOL_LANG_RC_CONFIG):
+	* libtool.m4 (AC_LIBTOOL_CONFIG): Typo.
+
+	* libtool.m4 (AC_LIBTOOL_LANG_GCJ_CONFIG, AC_LIBTOOL_LANG_RC_CONFIG):
 	Set $cc_basename.
 
 2005-05-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
