Fix problems with serial comparison sed scripts, and factor out common code from similar serial comparison functions:
* libtoolize.m4sh (func_keyword_update): Common code factored out
of func_ltmain_update and func_config_update.
(func_ltmain_update, func_config_update): Adjust, and fix sed
expressions to not use unportable ? modifier.
(func_install_update): New serial number based file updater keyed
of 'scriptversion' variable in install-sh.  Adjust all callers.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-03-29  Gary V. Vaughan  <gary@gnu.org>
+
+	Fix problems with serial comparison sed scripts, and factor out
+	common code from similar serial comparison functions:
+
+	* libtoolize.m4sh (func_keyword_update): Common code factored out
+	of func_ltmain_update and func_config_update.
+	(func_ltmain_update, func_config_update): Adjust, and fix sed
+	expressions to not use unportable ? modifier.
+	(func_install_update): New serial number based file updater keyed
+	of 'scriptversion' variable in install-sh.  Adjust all callers.
+
 2005-04-01  Mike Stump  <mrs@apple.com>
 
 	* m4/libtool.m4 (LT_CMD_MAX_LEN) [ netbsd, freebsd, openbsd,
