--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-04  Gary V. Vaughan  <gary@gnu.org>
 
+	* libltdl/loaders/Makefile.am: Removed actually.
+
+2005-04-04  Gary V. Vaughan  <gary@gnu.org>
+
 	Getting the value of ltdldatafiles from a submake was not
 	portable, and had problems with GNU make-3.80 at least.  This
 	changeset pulls the installation rules for libtoolize's copy of
