--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/template.at: New Autotest tests for C++ with templates.
+	First test provided by Markus Christen <markus@igc.phys.chem.ethz.ch>.
+	* tests/Makefile.am, tests/testsuite.at: Use and distribute.
+
 2005-04-04  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.m4sh (func_serial_update): Replace missing
