--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_CONFIG_COMMANDS): Only call sed if
+	necessary while quoting all libtool variables.
+	Reported by Robert Ögren <lists@roboros.com>.
+
 2005-04-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/Makefile.am: Typo.
