--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/linkorder.test: Move to
+	* tests/link-order.test: New, with fixed permissions.
+	* tests/Makefile.am: Adjust.
+
 2005-04-08  Alexandre Oliva  <aoliva@redhat.com>,
 	    Peter O'Gorman  <peter@pogma.com>
 
