--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ New in 2.1b: 2005-??-??; CVS version 2.1a, Libtool team:
 * Support (mostly) for DragonFly BSD.
 * Allow shell special characters like `$' in source file names, but not
   in object names, to enhance GCJ support.
+* Detection of compiler wrappers like distcc/ccache and $host_alias prefix.
 
 New in 1.9h: 2004-??-??; CVS version 1.9g, Libtool team:
 * Libtool versions can now be parallel installed, except that only one
