--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ New in 1.9h: 2004-??-??; CVS version 1.9g, Libtool team:
 * Support (mostly) for DragonFly BSD.
 * Allow shell special characters like `$' in source file names, but not
   in object names, to enhance GCJ support.
+* Detection of compiler wrappers like distcc/ccache and $host_alias prefix.
 
 New in 1.9f: 2004-10-23; CVS version 1.9e, Libtool team:
 * Calculate dllsearchpath correctly for wrapper scripts on cygwin.
