--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,20 @@
+2005-04-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (_LT_COMPILER_BOILERPLATE, _LT_LINKER_BOILERPLATE):
+	New macros: save warnings and boilerplate of simple compile/link tests.
+	(AC_LIBTOOL_LANG_C_CONFIG, AC_LIBTOOL_LANG_CXX_CONFIG,
+	AC_LIBTOOL_LANG_F77_CONFIG, AC_LIBTOOL_LANG_GCJ_CONFIG,
+	AC_LIBTOOL_LANG_RC_CONFIG): Call.
+	(AC_LIBTOOL_COMPILER_OPTION, AC_LIBTOOL_LINKER_OPTION, AC_LIBTOOL_PROG_CC_C_O):
+	Fail only if nonempty warnings different from default compile/link.
+	* NEWS: Update.
+
 2005-04-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/hardcode.test [solaris]:  Use dumpstabs if available,
 	to avoid false failure caused by debug section which contains
 	command line (Solaris cc).
+	Reported by Ralf Menzel <menzel@ls6.cs.uni-dortmund.de>.
 
 2005-04-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
 
