--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-23  Jonathan Ryshpan <jonrysh@pacbell.net>
+
+	* doc/libtool.texi: Get rid of overfull hboxes.
+
 2005-04-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
 
 	* libtool.m4 (_LT_CC_BASENAME): Use $echo, not $ECHO, for consistency.
