--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -702,7 +702,8 @@ to link the already-installed libtool library, it will do The Right
 Thing (TM) for you:
 
 @example
-burger$ @kbd{libtool --mode=link gcc -g -O -o test test.o /usr/local/lib/libhello.la}
+burger$ @kbd{libtool --mode=link gcc -g -O -o test \
+                test.o /usr/local/lib/libhello.la}
 gcc -g -O -o @value{objdir}/test test.o -Wl,--rpath
 -Wl,/usr/local/lib /usr/local/lib/libhello.a -lm
 creating test
@@ -884,7 +885,8 @@ help libtool with uninstallation (@pxref{Uninstall mode}) and linking
 Here is the shared library example:
 
 @example
-burger# @kbd{libtool --mode=install install -c libhello.la /usr/local/lib/libhello.la}
+burger# @kbd{libtool --mode=install install -c libhello.la \
+                /usr/local/lib/libhello.la}
 install -c @value{objdir}/libhello.so.0.0 /usr/local/lib/libhello.so.0.0
 install -c libhello.la /usr/local/lib/libhello.la
 install -c @value{objdir}/libhello.a /usr/local/lib/libhello.a
@@ -987,7 +989,8 @@ you could just ignore libtool entirely, and use the old @code{ar} and
 (but you probably don't want to) using libtool:
 
 @example
-burger$ @kbd{libtool --mode=install ./install-sh -c libhello.a /local/lib/libhello.a}
+burger$ @kbd{libtool --mode=install ./install-sh -c libhello.a \
+                /local/lib/libhello.a}
 ./install-sh -c libhello.a /local/lib/libhello.a
 ranlib /local/lib/libhello.a
 burger$
@@ -3355,7 +3358,8 @@ register_myloader (void)
   dlloader.dlloader_data = (lt_user_data)myloader_function;
 
   /* Add my loader as the default module loader. */
-  if (lt_dlloader_add (lt_dlloader_next (NULL), &dlloader, "myloader") != 0)
+  if (lt_dlloader_add (lt_dlloader_next (NULL), &dlloader, "myloader") \
+                != 0)
     return ERROR;
 
   return OK;
@@ -4184,9 +4188,9 @@ Sun's free service area
 server (@url{http://docs.sun.com/}).
 
 @item
-Compaq's Tru64 UNIX online documentation is at
+Compaq's Tru64 UNIX online documentation is at @*
 (@url{http://tru64unix.compaq.com/faqs/publications/pub_page/doc_list.html})
-with C++ documentation at
+with C++ documentation at @*
 (@url{http://tru64unix.compaq.com/cplus/docs/index.htm}).
 
 @item
