--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-23  Gary Kumfert <kumfert@llnl.gov>
+
+	* m4/libtool.m4 (_LT_LANG_F77_CONFIG) [ aix4, aix5 ]:
+	Adjust logic to match the C case: Only disable static if not
+	on ia64 nor runtimelinking.
+
 2005-04-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
 
 	* Makefile.am, HACKING: Use lt__cd throughout.
