* m4/libtool.m4: Audit use of echo vs $ECHO. * TODO: Update. Reported by Robert Ögren <lists@roboros.com> and others.

--- a/TODO
+++ b/TODO
@@ -56,7 +56,7 @@ GNU Libtool
 
 * Improve support for C++ with templates.
 
-* Audit use of $ECHO in libtool.m4.
+* Audit file listing in libtool.m4.
 
 * Fix deplibs_check_method=pass_all (which is wrong!) on linux.
 
